Some bugfixes and code cleanup

--- a/resources/translations.properties
+++ b/resources/translations.properties
@@ -15,3 +15,4 @@ overwritetitle = Overwrite file?
 overwritetext = Are you sure that you want to overwrite this file?
 duplicateerror = You can't have two files with the same name in the same folder
 doterror = Directories can't have '.' in their name
+renameText = Enter the new name
