Prevented naming two subjects with the same name

--- a/resources/translations.properties
+++ b/resources/translations.properties
@@ -16,3 +16,4 @@ overwritetext = Are you sure that you want to overwrite this file?
 duplicateerror = You can't have two files with the same name in the same folder
 doterror = Directories can't have '.' in their name
 renameText = Enter the new name
+nameerror = Two subjects can't have the same name
